--- a/Makefile.config
+++ b/Makefile.config
@@ -1,7 +1,7 @@
 ## Refer to http://caffe.berkeleyvision.org/installation.html
 # Contributions simplifying and improving our build system are welcome!
 
-#edited by abhishek on 01/02/2021 12pm
+###edited by abhishek on 01/02/2021 12pm
 
 # cuDNN acceleration switch (uncomment to build with cuDNN).
 USE_CUDNN := 1
